--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -2,26 +2,43 @@ name: Submit Google Form
 
 on:
   schedule:
-    - cron: '5 9 * * *'   # 9:05
-    - cron: '17 11 * * *'  # 11:17
-    - cron: '32 14 * * *'  # 14:32
-    - cron: '48 17 * * *'  # 17:48
+    - cron: '5 9 * * *'
+    - cron: '17 11 * * *'
+    - cron: '32 14 * * *'
+    - cron: '48 17 * * *'
   workflow_dispatch:
 
 jobs:
   submit:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # разрешаем запись в репозиторий
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - name: Checkout repository
+        uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}  # используем автоматический токен
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - run: pip install requests
-      - run: python google_form_bot.py
+
+      - name: Install dependencies
+        run: pip install requests
+
+      - name: Run bot
+        run: python google_form_bot.py
+
       - name: Commit and push state
         run: |
-          git config user.name "github-actions"
-          git config user.email "actions@github.com"
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add state.json
-          git diff --quiet && git diff --staged --quiet || git commit -m "Update state"
-          git push
+          # Проверяем, есть ли изменения
+          if git diff --quiet && git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "Update state after submission"
+            git push
+          fi
