--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -2,6 +2,7 @@ name: Submit Google Form
 
 on:
   schedule:
+    - cron: '53 16 * * *'
     - cron: '5 9 * * *'
     - cron: '17 11 * * *'
     - cron: '32 14 * * *'
