--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -2,9 +2,11 @@ name: Submit Google Form
 
 on:
   schedule:
-    # Тестовый запуск: поставьте время на 5 минут вперёд от текущего UTC
-    # Например, сейчас 17:50 UTC → поставьте 55 17 * * * (17:55)
-    - cron: '10 17 * * *'   # ЗАМЕНИТЕ НА АКТУАЛЬНОЕ ВРЕМЯ
+  - cron: '5 4 * * *'   # 9:05 по Алматы (UTC+5)
+  - cron: '17 6 * * *'  # 11:17 по Алматы
+  - cron: '32 9 * * *'  # 14:32 по Алматы
+  - cron: '48 12 * * *' # 17:48 по Алматы
+  - cron: '23 15 * * *' # 20:23 по Алматы
   workflow_dispatch:
 
 jobs:
