--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -2,11 +2,28 @@ name: Submit Google Form
 
 on:
   schedule:
-  - cron: '5 4 * * *'   # 9:05 по Алматы (UTC+5)
-  - cron: '17 6 * * *'  # 11:17 по Алматы
-  - cron: '32 9 * * *'  # 14:32 по Алматы
-  - cron: '48 12 * * *' # 17:48 по Алматы
-  - cron: '23 15 * * *' # 20:23 по Алматы
+    # 08:30–23:00 Алматы (UTC+5)
+    - cron: '30 3 * * *'   # 08:30
+    - cron: '15 4 * * *'   # 09:15
+    - cron: '0 5 * * *'    # 10:00
+    - cron: '45 5 * * *'   # 10:45
+    - cron: '30 6 * * *'   # 11:30
+    - cron: '15 7 * * *'   # 12:15
+    - cron: '0 8 * * *'    # 13:00
+    - cron: '45 8 * * *'   # 13:45
+    - cron: '30 9 * * *'   # 14:30
+    - cron: '15 10 * * *'  # 15:15
+    - cron: '0 11 * * *'   # 16:00
+    - cron: '45 11 * * *'  # 16:45
+    - cron: '30 12 * * *'  # 17:30
+    - cron: '15 13 * * *'  # 18:15
+    - cron: '0 14 * * *'   # 19:00
+    - cron: '45 14 * * *'  # 19:45
+    - cron: '30 15 * * *'  # 20:30
+    - cron: '15 16 * * *'  # 21:15
+    - cron: '0 17 * * *'   # 22:00
+    - cron: '0 18 * * *'   # 23:00
+
   workflow_dispatch:
 
 jobs:
